Changes

SVN
===
- easy dictionary access for EDICT, CEDICT and others
- multiple database support
- easy dictionary installation
- support for Win32, improved package installation
- pronunciation information from Unihan's kMandarin is not used anymore due to
  unknown provenance, see thread under
  http://www.unicode.org/mail-arch/unicode-ml/y2010-m01/0246.html
- stroke order corrections and new entries
- character decomposition corrections
- fix stroke order calculation for scheme ⿷ that affects characters with
  radicals 匚 and ⼖
- fix reading converters not using dbconnector of ReadingFactory
- added BIG5HKSCS character domain for zh_HK
- added JISX0208 and JISX0208_0213 character domains for ja
- possibility to return partial stroke order information, now shown in cjknife
- new examples check-strokes.py for showing stroke order coverage and
  icutransliterator.py for exposing cjklib's conversions as ICU transliterators.

0.2 release
===========
- initial stable release